# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import usersRouter from "./users";
 import conversationsRouter from "./conversations";
 import publicRouter from "./public";
+import linksRouter from "./links";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use("/users", usersRouter);
 router.use("/conversations", conversationsRouter);
 router.use("/public", publicRouter);
+router.use("/links", linksRouter);
 
 export default router;
